clusters/home/apps/kasm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasm 
  labels:
    app: kasm 
  namespace: kasm 
spec:
  ports:
  - port: 3000 
    name: kasm-config 
    targetPort: 3000 
  - port: 443 
    name: kasm-https 
    targetPort: 443 
  type: LoadBalancer
  selector:
    app: kasm
