clusters/home/apps/kasm/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden 
  namespace: vaultwarden 
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.local.bomal.cloud`)
      kind: Rule
      services:
        - name: vaultwarden 
          port: 80
  tls:
    secretName: local-bomal-cloud-tls
